fix: complete production audit and harden deployment